--- a/source/_data/organisers.yaml
+++ b/source/_data/organisers.yaml
@@ -46,3 +46,10 @@ items:
       twitter: adam__brady
       description: General Busy Body
       image: "/images/profiles/adam__brady.png"
+      
+      name: Sirani McNeill
+      twitter: mcne65
+      description: Junior software developer and cybersecurity expert. Diversity and Inclusion lead for CampJS. 
+      Happy to organise crafting workshops 
+      email: siranimcneill020@gmail.com 
+      image: "/images/profiles/adam__brady.png"
